@startuml

title __GUI's Class Diagram__\n

  namespace gui {
    class gui.HlavneOkno {
        - editujButton : JButton
        - frame : JFrame
        - klientiButton : JButton
        - odoberUcetButton : JButton
        - panel1 : JPanel
        - pridajButton : JButton
        - table1 : JTable
        - uctyButton : JButton
        - vymazButton : JButton
        - zalozUcetButton : JButton
        + HlavneOkno()
        + getFrame()
        - createUIComponents()
        - nacitajKlientov()
        - odoberUcet()
        - pridajKlienta()
        - vymazKlienta()
        - zalozUcetKlientovi()
        - zmenUdajeOKlientovi()
        - zobrazKlientov()
        - zobrazUcty()
    }
  }
  

  namespace gui {
    class gui.IconListRenderer {
        - icons : Map<Object, Icon>
        + IconListRenderer()
        + getListCellRendererComponent()
    }
  }
  

  namespace gui {
    class gui.KlientEdit {
        - buttonCancel : JButton
        - buttonOK : JButton
        - contentPane : JPanel
        - menoField : JTextField
        - narodnostBox : JComboBox<Narodnost>
        - priezviskoField : JTextField
        - vekField : JTextField
        + KlientEdit()
        + KlientEdit()
        + getKlient()
        - createUIComponents()
        - onCancel()
        - onOK()
    }
  }
  

  namespace gui {
    class gui.UcetEdit {
        - buttonCancel : JButton
        - buttonOK : JButton
        - cisloUctuField : JTextField
        - contentPane : JPanel
        - mnozstvoPenaziField : JTextField
        - typUctuComboBox : JComboBox
        + UcetEdit()
        + getKlient()
        + getUcet()
        + setKlient()
        - createUIComponents()
        - onCancel()
        - onOK()
    }
  }
  

  namespace gui {
    class gui.UcetOdober {
        - buttonCancel : JButton
        - buttonOK : JButton
        - contentPane : JPanel
        - uctyKlientaBox : JComboBox<String>
        + UcetOdober()
        - createUIComponents()
        - onCancel()
        - onOK()
    }
  }
  

  gui.HlavneOkno o-- org.example.Banka : banka
  gui.IconListRenderer -up-|> javax.swing.DefaultListCellRenderer
  gui.KlientEdit -up-|> javax.swing.JDialog
  gui.KlientEdit o-- gui.HlavneOkno : hlavneOkno
  gui.KlientEdit o-- entity.Klient : klient
  gui.UcetEdit -up-|> javax.swing.JDialog
  gui.UcetEdit o-- gui.HlavneOkno : hlavneOkno
  gui.UcetEdit o-- entity.Klient : klient
  gui.UcetEdit o-- entity.Ucet : ucet
  gui.UcetOdober -up-|> javax.swing.JDialog
  gui.UcetOdober o-- org.example.Banka : banka
  gui.UcetOdober o-- gui.HlavneOkno : hlavneOkno
  gui.UcetOdober o-- entity.Klient : klient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
